<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_title_general">
        <ListPreference
                android:defaultValue="0"
                android:dialogTitle="@string/title_network_calls"
                android:entries="@array/settings_network_calls_entries"
                android:entryValues="@array/settings_network_calls_values"
                android:key="@string/key_network_calls"
                android:summary="@string/summary_selected_network_calls"
                android:icon="@drawable/ic_network_check_black_24dp"
                android:title="@string/title_network_calls" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_title_permissions">
        <SwitchPreference
                android:defaultValue="true"
                android:icon="@drawable/ic_place_black_24dp"
                android:key="@string/key_settings_permissions_position"
                android:title="@string/title_settings_permissions_position" />

        <SwitchPreference
                android:defaultValue="true"
                android:icon="@drawable/ic_phone_black_24dp"
                android:key="@string/key_settings_permissions_sms"
                android:title="@string/title_settings_permissions_sms" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_title_notifications">
        <SwitchPreference
                android:defaultValue="true"
                android:key="@string/notifications_new_message"
                android:title="@string/title_new_notification_sound" />

        <RingtonePreference
                android:defaultValue="content://settings/system/notification_sound"
                android:dependency="notifications_new_message"
                android:key="@string/key_notifications_new_message_ringtone"
                android:ringtoneType="notification"
                android:summary="@string/summary_choose_ringtone"
                android:title="@string/settings_title_ringtone" />

        <SwitchPreference
                android:defaultValue="true"
                android:key="@string/key_vibrate"
                android:summary="@string/summary_vibrate"
                android:title="@string/title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_header_about">
        <Preference
                android:selectable="false"
                android:summary="@string/summary_about" />

        <Preference
                android:summary="@string/app_version"
                android:title="@string/title_version" />

        <Preference
                android:key="@string/key_send_feedback"
                android:summary="@string/summary_support"
                android:title="@string/title_send_feedback" />

        <Preference android:title="@string/title_terms">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>