<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/navigation_drawer_ce_mark"
          android:checked="false"
          android:id="@+id/ce"
          android:icon="@drawable/ic_ce_mark"/>

    <item android:title="@string/navigation_drawer_measurments">
        <menu>
            <group
                    android:checkableBehavior="single"
                    android:id="@+id/groupEn">
                <item android:id="@+id/temperature"
                      android:icon="@drawable/ic_thermometer"
                      android:title="@string/navigation_drawer_temperature"/>
                <item android:id="@+id/wind"
                      android:icon="@drawable/ic_wind"
                      android:title="@string/navigation_drawer_wind"/>
                <item android:id="@+id/visibility"
                      android:icon="@drawable/ic_visibility_black_24dp"
                      android:title="@string/navigation_drawer_visibility"/>
                <item android:id="@+id/pressure"
                      android:icon="@drawable/ic_gauge"
                      android:title="Trykk"/>
            </group>
        </menu>
    </item>

    <item android:title="Nå">
        <menu>
            <group
                    android:checkableBehavior="single"
                    android:id="@+id/grouEn">
                <item android:id="@+id/værpreferanser"
                      android:title="Værpreferanser"/>
            </group>
        </menu>
    </item>
</menu>