<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="4dp"
              android:orientation="vertical"

>
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="84dp"
            app:cardBackgroundColor="#FFFFFF"
            android:id="@+id/expand_button2"
            android:background="?android:windowBackground"
            android:elevation="6dp"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="40dp"
            app:cardElevation="3dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/title"
                    android:layout_marginTop="50dp"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/drawer"
                    android:paddingLeft="0dp"
                    android:layout_gravity="start|center"
                    android:padding="0dp"
                    android:paddingRight="0dp"
                    android:textAlignment="center"/>

            <ImageView
                    android:id="@+id/hour_wind_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/wind_black"
                    android:contentDescription="@string/wind_image"

                    android:layout_gravity="start|center"
                    android:baselineAligned="false"/>
            <TextView
                    android:id="@+id/hour_wind"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/drawer"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
            <ImageView
                    android:id="@+id/hour_wave_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"

                    android:src="@drawable/waves_black"
                    android:contentDescription="@string/waves_image"

                    android:layout_gravity="start|center"
            />
            <TextView
                    android:id="@+id/hour_wave"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/drawer"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandable_layout_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner"
            app:el_duration="1400"
            app:el_expanded="false"

            app:el_parallax="0.5"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_default">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:layout_gravity="center">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="0dp"
                        android:paddingEnd="15dp"
                        android:layout_gravity="start">
                    <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="10dp"
                            android:layout_gravity="center"

                            android:src="@drawable/fog_black"
                            android:contentDescription="@string/fog_image"/>

                    <TextView
                            android:id="@+id/hour_fog"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="14dp"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_gravity="center" android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_gravity="center">
                    <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="10dp"
                            android:layout_gravity="center"

                            android:src="@drawable/thermometer_black"
                            android:contentDescription="@string/thermometer_image"/>

                    <TextView
                            android:id="@+id/hour_thermo"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="14dp"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_gravity="center" android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="15dp"
                        android:paddingEnd="0dp"
                        android:layout_gravity="end">
                    <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="10dp"
                            android:layout_gravity="center"

                            android:src="@drawable/tide_black"
                            android:contentDescription="@string/tide_image"/>

                    <TextView
                            android:id="@+id/hour_tide"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="14dp"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_gravity="center" android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:layout_gravity="center">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="0dp"
                        android:paddingEnd="15dp"
                        android:layout_gravity="start">
                    <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="10dp"
                            android:layout_gravity="center"

                            android:src="@drawable/rain_black"
                            android:contentDescription="@string/water_image"/>

                    <TextView
                            android:id="@+id/hour_water"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="14dp"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_gravity="center" android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_gravity="center">
                    <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="10dp"
                            android:layout_gravity="center"

                            android:src="@drawable/visibility_black"
                            android:contentDescription="@string/visibility_image"/>

                    <TextView
                            android:id="@+id/hour_visibility"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="14dp"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_gravity="center" android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="15dp"
                        android:paddingEnd="0dp"
                        android:layout_gravity="end">
                    <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="10dp"
                            android:layout_gravity="center"

                            android:src="@drawable/humidity_black"
                            android:contentDescription="@string/humidity_image"/>

                    <TextView
                            android:id="@+id/hour_humid"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="14dp"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_gravity="center" android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </net.cachapa.expandablelayout.ExpandableLayout>
</LinearLayout>