<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.weekly.WeeklyFragment">

    <fragment
            android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/map1"
              tools:context=".ui.map.MapsActivity"
              android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            app:backgroundTint="@color/grey"
            android:layout_marginBottom="24dp"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/grey"
            android:visibility="invisible"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/wind_black"
            app:layout_constraintBottom_toTopOf="@+id/fab"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"/>


    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_rain"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/grey"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            android:src="@drawable/rain_black"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/fab_wind" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_harbor"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/grey"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            android:src="@drawable/anchor"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/fab_rain" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:text="@string/fab_map_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="4dp"
            android:id="@+id/fab_wind_text" app:layout_constraintStart_toEndOf="@+id/fab_wind"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="@+id/fab_wind"/>
    <TextView
            android:text="@string/fab_map_rain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="4dp"
            android:id="@+id/fab_rain_text" app:layout_constraintStart_toEndOf="@+id/fab_rain"
            android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/fab_rain"/>

    <TextView
            android:text="@string/fab_map_harbor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="4dp"
            android:id="@+id/fab_harbor_text" app:layout_constraintStart_toEndOf="@+id/fab_harbor"
            android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/fab_harbor"/>


    <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminateTint="@color/design_default_color_primary_dark"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/map1"/>

</android.support.constraint.ConstraintLayout>

